# HEAVEN

./: .gitignore  CLAUDE.md  README.md
server/: pyproject.toml
server/src/: config.py
server/src/db/sqlite/: models.py  session.py
server/src/graph/: knowledge_graph.py
server/src/ingestion/: arxiv_client.py  extractor.py  scholar_client.py  wolfram_client.py
server/src/model/: pipeline.py
server/src/model/extraction/: chunker.py  concept_extractor.py  deduplicator.py  relationship_extractor.py
server/src/model/formalization/: formalizer.py  latex_normalizer.py
server/src/model/providers/: base.py  claude.py  openai_compatible.py  registry.py
server/src/model/reasoning/: conflict_explainer.py  impact_explainer.py  msc_classifier.py
server/src/model/symbolic/: router.py
server/src/schemas/: models.py
server/src/verification/: lean.py  sympy_check.py
server/tests/model/: test_chunker.py  test_concept_extractor.py  test_conflict_explainer.py  test_deduplicator.py  test_formalizer.py  test_impact_explainer.py  test_latex_normalizer.py  test_msc_classifier.py  test_openai_compatible.py  test_registry.py  test_relationship_extractor.py  test_symbolic_router.py
