[project]
name = "heaven"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Vector DB
    "chromadb>=0.5",
    # Graph
    "networkx>=3.3",
    # Symbolic math & pre-verification
    "sympy>=1.13",
    # Data sources (on-demand fetching)
    "arxiv>=2.1",
    "wolframalpha>=5.0",
    "httpx>=0.27",
    # Embeddings (swappable when model layer is decided)
    "sentence-transformers>=3.0",
    # LLM provider
    "anthropic>=0.40",
    # Config & validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
